--- a/data-engineer.html
+++ b/data-engineer.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692283757-data-engineer-python-aws-java'>Vichara Data Engineer - Python AWS Java | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692283757-data-engineer-python-aws-java'>Vichara Data Engineer - Python AWS Java | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
@@ -103,11 +103,11 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692220623-data-engineer-sql-big-data-cloud'>Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692220623-data-engineer-sql-big-data-cloud'>Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -133,7 +133,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
 not subject you to adverse treatment). Our company values diversity.</p>
@@ -218,7 +218,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
+<h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... A successful candidate will work side-by-side with engineers and scientists in 
 broad disciplines from software, artificial intelligence/machine learning, electronic
@@ -269,7 +269,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -277,7 +277,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hulu/job/oZIH9fwh'>Hulu Careers - Senior Data Engineer - Ads</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hulu/job/oZIH9fwh'>Hulu Careers - Senior Data Engineer - Ads</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... At Hulu, data is essential for all our decision-making needs whether it's related to 
 product design, measuring advertising effectiveness, helping users discover?...</p>
@@ -310,7 +310,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -356,7 +356,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
+<h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
       Data Engineer (m/f/div) - Elinvar GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -387,7 +387,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -420,7 +420,7 @@ Engineering. Full-time. Apply for this job. Quizlet's mission is to help student
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>13 juil. 2019 ... Pour ce faire, vous utiliserez des techniques avanc?es d'intelligence artificielle (
 TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</p>
@@ -471,7 +471,7 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
