--- a/android-engineer.html
+++ b/android-engineer.html
@@ -60,11 +60,11 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4207908002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4207908002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -80,7 +80,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vokal.recruiterbox.com/jobs/fk0fdvq'>
+<h5><a href='http://vokal.recruiterbox.com/jobs/fk0fdvq'>
     Android Engineer  at Vokal
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
@@ -108,7 +108,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
+<h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -116,7 +116,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oAezafwh'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oAezafwh'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -136,7 +136,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -244,7 +244,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p>Jun 28, 2019 ... Because Ultra/Mint Mobile is looking for our next extraordinary Senior Android 
 Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691461223-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691461223-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -265,7 +265,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
+<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -330,7 +330,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1756369'>Job Application for Senior Android Engineer at Thumbtack</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1756369'>Job Application for Senior Android Engineer at Thumbtack</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -429,7 +429,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-06-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690129027-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690129027-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
